--- a/xnradmin-web/src/main/resources/conf/server.properties
+++ b/xnradmin-web/src/main/resources/conf/server.properties
@@ -22,16 +22,16 @@ platform.script.methods=execute
 mysql.master.jdbc.driverClassName=com.mysql.jdbc.Driver
 #mysql.master.jdbc.url=jdbc:mysql://182.254.243.248:3306/xnr?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 #mysql.master.jdbc.url=jdbc:mysql://221.123.168.58:3306/xnr?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
-mysql.master.jdbc.url=jdbc\:mysql\://115.29.38.253\:3306/docreg?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-mysql.master.jdbc.username=docreg
-mysql.master.jdbc.password=docregdba
+mysql.master.jdbc.url=jdbc\:mysql\://115.29.38.253\:3306/xnr?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+mysql.master.jdbc.username=51xnr
+mysql.master.jdbc.password=xnri8ujklo9i
 
 #mysql.slave01.jdbc.driverClassName=com.mysql.jdbc.Driver
 #mysql.slave01.jdbc.url=jdbc:mysql://182.254.243.248:3306/xnr?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 #mysql.slave01.jdbc.url=jdbc:mysql://221.123.168.58:3306/xnr?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
-mysql.slave01.jdbc.url=jdbc\:mysql\://115.29.38.253\:3306/docreg?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-mysql.slave01.jdbc.username=docreg
-mysql.slave01.jdbc.password=docregdba
+mysql.slave01.jdbc.url=jdbc\:mysql\://115.29.38.253\:3306/xnr?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+mysql.slave01.jdbc.username=51xnr
+mysql.slave01.jdbc.password=xnri8ujklo9i
 
 [mongodb]
 mongo.db.address=115.29.38.253
