--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>jaxen</groupId>
+		    <artifactId>jaxen</artifactId>
+		    <version>1.1.6</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
@@ -247,6 +254,11 @@
 			<artifactId>xmlunit</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
@@ -426,13 +438,11 @@
 		</dependency>
 		
 		<!-- import local jar: mvn install:install-file -Dfile=/Users/liubin/source/xnradmin/doc/localjar/json-lib-2.1-jdk15.jar -DgroupId=net.sf.json-lib -DartifactId=json-lib -Dversion=2.1 -Dpackaging=jar -->
-		<!--
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib</artifactId>
 			<version>2.1</version>
 		</dependency>
-		-->
 
 	</dependencies>
 
