--- a/pom.xml
+++ b/pom.xml
@@ -442,7 +442,9 @@
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib</artifactId>
 			<version>2.1</version>
-		</dependency>
+			<classifier>jdk15</classifier>
+			
+		</dependency> 
 
 	</dependencies>
 
