--- a/pom.xml
+++ b/pom.xml
@@ -273,10 +273,10 @@
             <version>1.4.7</version>
         </dependency>
         <dependency>
-            <groupId>com.google</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.2.4</version>
-        </dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.javassist</groupId>
