--- a/xnradmin-web/src/main/resources/conf/server.properties
+++ b/xnradmin-web/src/main/resources/conf/server.properties
@@ -26,7 +26,7 @@ mysql.master.jdbc.driverClassName=com.mysql.jdbc.Driver
 #mysql.master.jdbc.password=robustsoft
 mysql.master.jdbc.url=jdbc\:mysql\://localhost\:3306/xnr?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
 mysql.master.jdbc.username=root
-mysql.master.jdbc.password=254812
+mysql.master.jdbc.password=robustsoft
 
 #mysql.slave01.jdbc.driverClassName=com.mysql.jdbc.Driver
 #mysql.slave01.jdbc.url=jdbc:mysql://182.254.243.248:3306/xnr?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
@@ -36,7 +36,7 @@ mysql.master.jdbc.password=254812
 #mysql.slave01.jdbc.password=robustsoft
 mysql.slave01.jdbc.url=jdbc\:mysql\://localhost\:3306/xnr?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
 mysql.slave01.jdbc.username=root
-mysql.slave01.jdbc.password=254812
+mysql.slave01.jdbc.password=robustsoft
 
 [mongodb]
 mongo.db.address=115.29.38.253
